--- a/data/model/dcrnn_bay.yaml
+++ b/data/model/dcrnn_bay.yaml
@@ -20,7 +20,7 @@ model:
   output_dim: 1
   rnn_units: 64 
   seq_len: 12
-  use_curriculum_learning: true
+  use_curriculum_learning: false
 
 train:
   base_lr: 0.01
